# RosettaStone

./: .gitignore  CMakeLists.txt
Data/: model_0.rsm  vocab.rsv
RosettaStone/: CMakeLists.txt  RosettaStone.cpp  RosettaStone.h
